--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,4 @@
 services:
-  reverse_proxy:
-    image: docker.io/library/traefik:v2.10
-    command:
-      - --api.insecure=true
-      - --providers.file=true
-      - --providers.file.filename=/etc/traefik/rules.yaml
-      - --providers.file.watch=true
-      - --entrypoints.web.address=:80
-    ports:
-      - 8088:80
-      - 8080:8080
-    volumes:
-      - "./util/traefik/rules.yaml:/etc/traefik/rules.yaml"
-    networks:
-      - klicker
-
   reverse_proxy_docker:
     image: docker.io/library/traefik:v2.10
     command:
@@ -28,6 +12,22 @@ services:
       - 8080:8080
     volumes:
       - "./util/traefik/rules_docker.yaml:/etc/traefik/rules.yaml"
+    networks:
+      - klicker
+
+  reverse_proxy_wsl:
+    image: docker.io/library/traefik:v2.10
+    command:
+      - --api.insecure=true
+      - --providers.file=true
+      - --providers.file.filename=/etc/traefik/rules.yaml
+      - --providers.file.watch=true
+      - --entrypoints.web.address=:80
+    ports:
+      - 80:80
+      - 8080:8080
+    volumes:
+      - "./util/traefik/rules_wsl.yaml:/etc/traefik/rules.yaml"
     networks:
       - klicker
 
