--- a/apps/frontend-pwa/package.json
+++ b/apps/frontend-pwa/package.json
@@ -25,7 +25,7 @@
     "@radix-ui/react-tabs": "1.0.3",
     "@socialgouv/matomo-next": "1.6.1",
     "@uidotdev/usehooks": "2.4.1",
-    "@uzh-bf/design-system": "2.13.3",
+    "@uzh-bf/design-system": "3.0.0-alpha.2",
     "body-parser": "1.20.2",
     "dayjs": "1.11.9",
     "deepmerge": "4.3.1",
