--- a/packages/lti/package.json
+++ b/packages/lti/package.json
@@ -26,7 +26,7 @@
     "typescript": "5.4.5"
   },
   "peerDependencies": {
-    "@uzh-bf/design-system": "2.13.3",
+    "@uzh-bf/design-system": "3.0.0-alpha.2",
     "next": "14.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
