--- a/packages/shared-components/package.json
+++ b/packages/shared-components/package.json
@@ -37,7 +37,7 @@
     "@fortawesome/free-regular-svg-icons": "6.4.2",
     "@fortawesome/free-solid-svg-icons": "6.4.2",
     "@fortawesome/react-fontawesome": "0.2.0",
-    "@uzh-bf/design-system": "2.13.3",
+    "@uzh-bf/design-system": "3.0.0-alpha.2",
     "dayjs": "1.11.9",
     "formik": "2.4.3",
     "js-cookie": "3.0.5",
