deps: upgrade design system to v3 alpha (#4158)

--- a/apps/office-addin/package.json
+++ b/apps/office-addin/package.json
@@ -3,12 +3,12 @@
   "version": "3.1.2-rc.2",
   "license": "AGPL-3.0",
   "dependencies": {
-    "@uzh-bf/design-system": "2.13.3",
+    "@uzh-bf/design-system": "3.0.0-alpha.11",
     "core-js": "3.30.2",
     "es6-promise": "4.2.8",
-    "formik": "2.4.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "formik": "2.4.6",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "regenerator-runtime": "0.13.11",
     "yup": "1.2.0"
   },
@@ -43,13 +43,13 @@
     "office-addin-manifest": "1.12.4",
     "office-addin-prettier-config": "1.2.0",
     "os-browserify": "0.3.0",
-    "postcss": "8.4.27",
+    "postcss": "8.4.41",
     "prettier": "2.8.8",
     "prettier-plugin-organize-imports": "3.2.3",
     "process": "0.11.10",
     "source-map-loader": "4.0.1",
-    "tailwindcss": "3.3.3",
-    "tailwindcss-radix": "2.8.0",
+    "tailwindcss": "3.4.9",
+    "tailwindcss-radix": "3.0.3",
     "ts-loader": "9.4.2",
     "typescript": "5.4.5",
     "webpack": "5.83.1",
