--- a/apps/frontend-manage/package.json
+++ b/apps/frontend-manage/package.json
@@ -6,11 +6,11 @@
   "dependencies": {
     "@apollo/client": "3.8.3",
     "@azure/storage-blob": "12.15.0",
-    "@fortawesome/fontawesome-svg-core": "6.4.2",
+    "@fortawesome/fontawesome-svg-core": "6.6.0",
     "@fortawesome/free-brands-svg-icons": "6.4.2",
-    "@fortawesome/free-regular-svg-icons": "6.4.2",
-    "@fortawesome/free-solid-svg-icons": "6.4.2",
-    "@fortawesome/react-fontawesome": "0.2.0",
+    "@fortawesome/free-regular-svg-icons": "6.6.0",
+    "@fortawesome/free-solid-svg-icons": "6.6.0",
+    "@fortawesome/react-fontawesome": "0.2.2",
     "@klicker-uzh/graphql": "workspace:*",
     "@klicker-uzh/i18n": "workspace:*",
     "@klicker-uzh/markdown": "workspace:*",
@@ -18,11 +18,11 @@
     "@klicker-uzh/prisma": "workspace:*",
     "@klicker-uzh/shared-components": "workspace:*",
     "@socialgouv/matomo-next": "1.6.1",
-    "@uzh-bf/design-system": "2.13.3",
+    "@uzh-bf/design-system": "3.0.0-alpha.11",
     "d3": "7.8.4",
-    "dayjs": "1.11.9",
+    "dayjs": "1.11.12",
     "deepmerge": "4.3.1",
-    "formik": "2.4.3",
+    "formik": "2.4.6",
     "generate-password": "1.7.0",
     "graphql": "16.7.1",
     "graphql-codegen-persisted-query-ids": "0.1.2",
@@ -38,11 +38,11 @@
     "next-pwa": "5.6.0",
     "nookies": "2.5.2",
     "ramda": "0.29.0",
-    "react": "18.2.0",
+    "react": "18.3.1",
     "react-d3-speedometer": "2.1.0-rc.0",
     "react-dnd": "16.0.1",
     "react-dnd-html5-backend": "16.0.1",
-    "react-dom": "18.2.0",
+    "react-dom": "18.3.1",
     "react-dropzone": "14.2.3",
     "react-qrcode-logo": "2.9.0",
     "react-resizable-panels": "2.0.12",
@@ -55,7 +55,7 @@
     "slate": "0.94.1",
     "slate-history": "0.93.0",
     "slate-react": "0.94.2",
-    "tailwind-merge": "1.14.0",
+    "tailwind-merge": "2.4.0",
     "yup": "1.2.0"
   },
   "devDependencies": {
@@ -78,13 +78,13 @@
     "cssnano": "6.0.1",
     "eslint": "8.45.0",
     "eslint-config-next": "14.1.0",
-    "postcss": "8.4.27",
-    "postcss-import": "15.1.0",
+    "postcss": "8.4.41",
+    "postcss-import": "16.1.0",
     "prettier": "2.8.8",
     "prettier-plugin-organize-imports": "3.2.3",
     "prettier-plugin-tailwindcss": "0.4.1",
-    "tailwindcss": "3.3.3",
-    "tailwindcss-radix": "2.8.0",
+    "tailwindcss": "3.4.9",
+    "tailwindcss-radix": "3.0.3",
     "typescript": "5.4.5"
   },
   "scripts": {
