--- a/apps/lti/package.json
+++ b/apps/lti/package.json
@@ -8,8 +8,17 @@
   "files": [
     "dist"
   ],
-  "dependencies": {},
-  "devDependencies": {},
+  "dependencies": {
+    "ltijs": "5.9.4",
+    "ltijs-sequelize": "2.4.4"
+  },
+  "devDependencies": {
+    "@types/node": "^20.12.12",
+    "cross-env": "7.0.3",
+    "dotenv": "16.4.5",
+    "tsup": "7.2.0",
+    "typescript": "5.4.5"
+  },
   "scripts": {
     "build": "cross-env NODE_ENV=production pnpm run build:ts",
     "build:ts": "tsup",
