working with ngrok testing

--- a/deploy/charts/klicker-uzh-v2/templates/secret-lti.yaml
+++ b/deploy/charts/klicker-uzh-v2/templates/secret-lti.yaml
@@ -6,4 +6,5 @@ metadata:
     {{- include "chart.labels" . | nindent 4 }}
 type: Opaque
 stringData:
-  EMPTY: ""
+  LTI_DB_PASS: {{ .Values.lti.db.password | quote }}
+  LTI_ENCRYPTION_KEY: {{ .Values.lti.encryptionKey | quote }}
