--- a/apps/lti/package.json
+++ b/apps/lti/package.json
@@ -9,13 +9,16 @@
     "dist"
   ],
   "dependencies": {
+    "cross-env": "7.0.3",
+    "dotenv": "16.4.5",
     "ltijs": "5.9.4",
     "ltijs-sequelize": "2.4.4"
   },
   "devDependencies": {
+    "@types/ltijs": "^4.0.11",
     "@types/node": "^20.12.12",
-    "cross-env": "7.0.3",
-    "dotenv": "16.4.5",
+    "nodemon": "3.0.1",
+    "npm-run-all": "4.1.5",
     "tsup": "7.2.0",
     "typescript": "5.4.5"
   },
