--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -35,12 +35,10 @@
     "react-medium-image-zoom": "4.4.3",
     "react-text-transition": "^3.1.0",
     "recharts": "2.7.2",
+    "@tailwindcss/typography": "0.5.9",
     "tailwind-merge": "2.4.0",
     "tailwindcss": "3.4.9",
     "typescript": "5.4.5"
-  },
-  "devDependencies": {
-    "@tailwindcss/typography": "0.5.9"
   },
   "scripts": {
     "build": "docusaurus build",
