--- a/turbo.json
+++ b/turbo.json
@@ -1,16 +1,16 @@
 {
   "$schema": "https://turborepo.org/schema.json",
-  "pipeline": {
+  "tasks": {
     "format": {},
     "format:check": {
-      "outputMode": "errors-only"
+      "outputLogs": "errors-only"
     },
     "lint": {
-      "outputMode": "errors-only"
+      "outputLogs": "errors-only"
     },
     "check": {
       "cache": false,
-      "outputMode": "errors-only",
+      "outputLogs": "errors-only",
       "dependsOn": ["^build"]
     },
     "build": {
@@ -28,7 +28,8 @@
         "@klicker-uzh/prisma#build",
         "@klicker-uzh/graphql#build",
         "@klicker-uzh/markdown#build"
-      ]
+      ],
+      "persistent": true
     },
     "dev:offline": {
       "cache": false,
@@ -37,7 +38,8 @@
         "@klicker-uzh/prisma#build",
         "@klicker-uzh/graphql#build",
         "@klicker-uzh/markdown#build"
-      ]
+      ],
+      "persistent": true
     },
     "dev:migration": {
       "cache": false,
@@ -46,14 +48,17 @@
         "@klicker-uzh/prisma#build",
         "@klicker-uzh/graphql#build",
         "@klicker-uzh/markdown#build"
-      ]
+      ],
+      "persistent": true
     },
     "dev:docs": {
-      "cache": false
+      "cache": false,
+      "persistent": true
     },
     "dev:test": {
       "dependsOn": ["^build:test", "build:test"],
-      "outputs": ["dist/**", ".next/**"]
+      "outputs": ["dist/**", ".next/**"],
+      "persistent": true
     },
     "publish": {
       "cache": false,
