upgrade prisma, use model directory, implement schema sync script

--- a/apps/analytics/pyproject.toml
+++ b/apps/analytics/pyproject.toml
@@ -22,5 +22,6 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poe.tasks]
+sync-schemas = "python prisma/sync-schemas.py"
 generate = "prisma generate"
 main = "doppler run --config dev -- python main.py"
