--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -12,7 +12,7 @@
     "@klicker-uzh/util": "workspace:*"
   },
   "dependencies": {
-    "@prisma/client": "5.9.1"
+    "@prisma/client": "5.18.0"
   },
   "devDependencies": {
     "@pothos/plugin-prisma": "3.60.0",
@@ -34,8 +34,8 @@
     "p-map": "7.0.2",
     "prettier": "2.8.8",
     "prettier-plugin-organize-imports": "3.2.3",
-    "prisma": "5.9.1",
-    "prisma-json-types-generator": "3.0.3",
+    "prisma": "5.18.0",
+    "prisma-json-types-generator": "3.0.4",
     "ramda": "0.29.0",
     "size-limit": "8.2.4",
     "ts-node": "10.9.1",
@@ -55,30 +55,30 @@
     "check": "tsc --noEmit",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "generate": "prisma generate --schema=src/prisma/schema.prisma",
+    "generate": "prisma generate --schema=src/prisma/schema",
     "prisma:deploy": "doppler run --config dev -- pnpm run prisma:deploy:raw",
     "prisma:deploy:prod": "doppler run --config prd -- pnpm run prisma:deploy:raw",
     "prisma:deploy:qa": "doppler run --config stg -- pnpm run prisma:deploy:raw",
-    "prisma:deploy:raw": "prisma migrate deploy --schema=src/prisma/schema.prisma",
+    "prisma:deploy:raw": "prisma migrate deploy --schema=src/prisma/schema",
     "prisma:diff": "doppler run --config dev --command 'prisma migrate diff --from-url \"$PROD_DATABASE_URL\" --to-migrations src/prisma/migrations --shadow-database-url \"postgres://klicker:klicker@localhost:5432/shadow\"'",
-    "prisma:migrate": "doppler run --config dev -- prisma migrate dev --schema=src/prisma/schema.prisma",
-    "prisma:migrate:create": "doppler run --config dev -- prisma migrate dev --schema=src/prisma/schema.prisma --create-only",
+    "prisma:migrate": "doppler run --config dev -- prisma migrate dev --schema=src/prisma/schema",
+    "prisma:migrate:create": "doppler run --config dev -- prisma migrate dev --schema=src/prisma/schema --create-only",
     "prisma:push": "doppler run --config dev -- pnpm run prisma:push:raw",
     "prisma:push:qa": "doppler run --config stg -- pnpm run prisma:push:raw",
-    "prisma:push:raw": "prisma db push --schema=src/prisma/schema.prisma",
+    "prisma:push:raw": "prisma db push --schema=src/prisma/schema",
     "prisma:reset": "doppler run --config dev -- pnpm run prisma:reset:raw",
     "prisma:reset:yes": "doppler run --config dev -- pnpm run prisma:reset:raw -f",
     "prisma:reset:qa": "doppler run --config stg -- pnpm run prisma:reset:raw",
-    "prisma:reset:raw": "prisma migrate reset --schema=src/prisma/schema.prisma --skip-seed",
-    "prisma:reset:seed": "doppler run --config dev -- prisma migrate reset --schema=src/prisma/schema.prisma",
+    "prisma:reset:raw": "prisma migrate reset --schema=src/prisma/schema --skip-seed",
+    "prisma:reset:seed": "doppler run --config dev -- prisma migrate reset --schema=src/prisma/schema",
     "prisma:resetCypress": "pnpm run prisma:reset:raw",
-    "prisma:resolve:prod": "doppler run --config prd -- prisma migrate resolve --schema=src/prisma/schema.prisma",
+    "prisma:resolve:prod": "doppler run --config prd -- prisma migrate resolve --schema=src/prisma/schema",
     "prisma:setup": "run-s prisma:reset prisma:push seed",
     "prisma:setup:yes": "run-s prisma:reset:yes prisma:push seed",
     "prisma:studio": "doppler run --config dev -- pnpm run prisma:studio:raw",
     "prisma:studio:prod": "doppler run --config prd -- pnpm run prisma:studio:raw",
     "prisma:studio:qa": "doppler run --config stg -- pnpm run prisma:studio:raw",
-    "prisma:studio:raw": "prisma studio --schema=src/prisma/schema.prisma",
+    "prisma:studio:raw": "prisma studio --schema=src/prisma/schema",
     "script": "ENV=development doppler run --config dev -- tsx",
     "script:prod": "ENV=production doppler run --config prd -- tsx",
     "seed": "ENV=development doppler run --config dev -- run-s build seed:test",
