--- a/apps/analytics/pyproject.toml
+++ b/apps/analytics/pyproject.toml
@@ -9,13 +9,12 @@ packages = [{include = "@klicker_uzh"}]
 
 [tool.poetry.dependencies]
 python = "^3.12"
-pandas = "^2.2.2"
-prisma = "^0.14.0"
-asyncio = "^3.4.3"
+pandas = "2.2.2"
+prisma = "0.14.0"
 
 [tool.poetry.dev-dependencies]
-poethepoet = "^0.27.0"
-ipykernel = "^6.29.5"
+poethepoet = "0.27.0"
+ipykernel = "6.29.5"
 
 [build-system]
 requires = ["poetry-core"]
