get schema files in dockerfile

--- a/apps/analytics/Dockerfile
+++ b/apps/analytics/Dockerfile
@@ -2,10 +2,12 @@ FROM python:3.12
 
 WORKDIR /app
 
-COPY requirements.txt .
+COPY apps/analytics/requirements.txt .
 
 RUN pip install -r requirements.txt
 
-COPY . .
+COPY apps/analytics/ .
+COPY packages/prisma/src/prisma/schema/*.prisma apps/analytics/prisma/schema/
+RUN rm apps/analytics/prisma/schema/js.prisma
 
 RUN prisma generate
