--- a/packages/qti/pyproject.toml
+++ b/packages/qti/pyproject.toml
@@ -10,6 +10,8 @@ packages = [{include = "@klicker_uzh"}]
 python = "^3.12"
 eq-quizgen = "^0.2.8"
 json2xml = "^5.0.4"
+lxml = "^5.3.0"
+jinja2 = "^3.1.4"
 
 
 [tool.poetry.group.dev.dependencies]
