fix: add env declarations to turbo config

--- a/turbo.json
+++ b/turbo.json
@@ -1,5 +1,51 @@
 {
   "$schema": "https://turborepo.org/schema.json",
+  "globalEnv": [
+    "API_DOMAIN",
+    "APP_CONTROL_SUBDOMAIN",
+    "APP_MANAGE_SUBDOMAIN",
+    "APP_SECRET",
+    "APP_STUDENT_SUBDOMAIN",
+    "AZUREWEBJOBSFEATUREFLAGS",
+    "AZUREWEBJOBSSTORAGE",
+    "BLOB_STORAGE_ACCESS_KEY",
+    "BLOB_STORAGE_ACCOUNT_NAME",
+    "COOKIE_DOMAIN",
+    "CRON_TOKEN",
+    "DATABASE_IMPORT_USER",
+    "DATABASE_URL",
+    "EDUID_CLIENT_SECRET",
+    "FUNCTIONS_EXTENSION_VERSION",
+    "FUNCTIONS_WORKER_PROCESS_COUNT",
+    "FUNCTIONS_WORKER_RUNTIME",
+    "LISTMONK_PASS",
+    "LISTMONK_TEMPLATE_MIGRATION_FAILURE",
+    "LISTMONK_TEMPLATE_MIGRATION_REQUEST",
+    "LISTMONK_TEMPLATE_MIGRATION_SUCCESS",
+    "LISTMONK_URL",
+    "LISTMONK_USER",
+    "LTI_CLIENT_ID",
+    "LTI_DB_CONNECTION_STRING",
+    "LTI_ENCRYPTION_KEY",
+    "LTI_PORT",
+    "LTI_REDIRECT_URL",
+    "NEXT_PUBLIC_APP_STUDENT_SUBDOMAIN",
+    "NODE_ENV",
+    "NOTIFICATION_SECRET",
+    "NOTIFICATION_SUPPORT_MAIL",
+    "NOTIFICATION_URL",
+    "REDIS_CACHE_HOST",
+    "REDIS_CACHE_PORT",
+    "REDIS_HOST",
+    "REDIS_PORT",
+    "SERVICE_BUS_CONNECTION_STRING",
+    "SERVICE_BUS_QUEUE_NAME",
+    "SHADOW_DATABASE_URL",
+    "TEAMS_WEBHOOK_URL",
+    "VAPID_PRIVATE_KEY",
+    "VAPID_PUBLIC_KEY",
+    "VAPID_PUBLIC_KEY_TEST"
+  ],
   "tasks": {
     "format": {},
     "format:check": {
