--- a/apps/frontend-control/package.json
+++ b/apps/frontend-control/package.json
@@ -73,6 +73,7 @@
     "build:test": "cross-env NODE_ENV=test next build",
     "check": "tsc --noEmit",
     "dev": "cross-env NODE_ENV=development next dev --port 3003",
+    "dev:doppler": "doppler run --config dev -- pnpm run dev",
     "dev:offline": "cross-env NODE_ENV=development next dev --port 3003",
     "dev:test": "cross-env NODE_ENV=test next dev --port 3003",
     "format": "prettier --write .",
