--- a/apps/func-incoming-responses/package.json
+++ b/apps/func-incoming-responses/package.json
@@ -34,6 +34,7 @@
     "build:test": "pnpm run build",
     "check": "tsc --noEmit",
     "dev": "npm-run-all --parallel dev:ts dev:func",
+    "dev:doppler": "doppler run --config dev -- pnpm run dev",
     "dev:func": "func start -p 7072 --verbose --javascript",
     "dev:ts": "tsup --watch",
     "format": "prettier --write .",
