--- a/packages/grading/package.json
+++ b/packages/grading/package.json
@@ -32,6 +32,7 @@
     "build:test": "pnpm run build",
     "check": "tsc --noEmit",
     "dev": "cross-env NODE_ENV=development tsup --watch",
+    "dev:doppler": "doppler run --config dev -- pnpm run dev",
     "dev:offline": "pnpm run dev",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
