--- a/apps/frontend-manage/package.json
+++ b/apps/frontend-manage/package.json
@@ -92,6 +92,7 @@
     "build:test": "cross-env NODE_ENV=test next build",
     "check": "tsc --noEmit",
     "dev": "cross-env NODE_ENV=development next dev --port 3002",
+    "dev:doppler": "doppler run --config dev -- pnpm run dev",
     "dev:offline": "cross-env NODE_ENV=development next dev --port 3002",
     "dev:test": "cross-env NODE_ENV=test next dev --port 3002",
     "format": "prettier --write .",
