--- a/apps/frontend-pwa/package.json
+++ b/apps/frontend-pwa/package.json
@@ -86,6 +86,7 @@
     "build:test": "cross-env NODE_ENV=test next build",
     "check": "tsc --noEmit",
     "dev": "cross-env NODE_ENV=development next dev --port 3001",
+    "dev:doppler": "doppler run --config dev -- pnpm run dev",
     "dev:offline": "cross-env NODE_ENV=development next dev --port 3001",
     "dev:test": "cross-env NODE_ENV=test next dev --port 3001",
     "format": "prettier --write .",
