--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -35,6 +35,7 @@
     "build:test": "pnpm run build",
     "check": "tsc --noEmit",
     "dev": "run-p dev:ts",
+    "dev:doppler": "doppler run --config dev -- pnpm run dev",
     "dev:ts": "cross-env NODE_ENV=development tsup --watch",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
