--- a/deploy/charts/klicker-uzh-v2/values.yaml
+++ b/deploy/charts/klicker-uzh-v2/values.yaml
@@ -259,11 +259,13 @@ lti:
   encryptionKey:
 
   db:
+    type: postgres
     host:
     port:
     name:
     username:
     password:
+    connectionString:
 
   image:
     repository: ghcr.io/uzh-bf/klicker-uzh/lti
