--- a/deploy/charts/klicker-uzh-v2/templates/cm-lti.yaml
+++ b/deploy/charts/klicker-uzh-v2/templates/cm-lti.yaml
@@ -6,6 +6,7 @@ metadata:
   labels:
     {{- include "chart.labels" . | nindent 4 }}
 data:
+  LTI_DB_TYPE: {{ .Values.lti.db.type | quote }}
   LTI_DB_HOST: {{ .Values.lti.db.host | quote }}
   LTI_DB_PORT: {{ .Values.lti.db.port | quote }}
   LTI_DB_NAME: {{ .Values.lti.db.name | quote }}
