--- a/apps/lti/package.json
+++ b/apps/lti/package.json
@@ -25,8 +25,8 @@
     "build": "cross-env NODE_ENV=production pnpm run build:ts",
     "build:ts": "tsup",
     "check": "tsc --noEmit",
-    "dev": "npm-run-all --parallel dev:build dev:run",
-    "dev:doppler": "doppler run --config dev -- pnpm run dev",
+    "dev:lti": "npm-run-all --parallel dev:build dev:run",
+    "dev:doppler": "doppler run --config dev -- pnpm run dev:lti",
     "dev:build": "tsup --watch",
     "dev:offline": "pnpm run dev",
     "dev:test": "cross-env NODE_ENV=test pnpm run dev",
