--- a/packages/qti/pyproject.toml
+++ b/packages/qti/pyproject.toml
@@ -12,6 +12,7 @@ eq-quizgen = "^0.2.8"
 json2xml = "^5.0.4"
 lxml = "^5.3.0"
 jinja2 = "^3.1.4"
+markdown = "^3.6"
 
 
 [tool.poetry.group.dev.dependencies]
