--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -13,13 +13,13 @@
     "@azure/storage-blob": "12.15.0",
     "@klicker-uzh/grading": "workspace:*",
     "@klicker-uzh/prisma": "workspace:*",
+    "@klicker-uzh/transactional": "workspace:*",
     "@klicker-uzh/util": "workspace:*",
     "@pothos/core": "3.38.0",
     "@pothos/plugin-directives": "3.10.2",
     "@pothos/plugin-prisma": "3.60.0",
     "@pothos/plugin-scope-auth": "3.20.0",
     "@pothos/plugin-validation": "3.10.0",
-    "@react-email/components": "0.0.22",
     "axios": "1.4.0",
     "bcryptjs": "2.4.3",
     "dayjs": "1.11.12",
@@ -28,14 +28,11 @@
     "graphql-scalars": "1.22.2",
     "graphql-yoga": "3.9.1",
     "jsonwebtoken": "9.0.2",
-    "mailing-core": "1.1.0",
     "mathjs": "11.9.1",
     "mongodb": "5.7.0",
     "node-schedule": "2.1.1",
     "nodemailer": "6.9.14",
     "ramda": "0.29.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
     "uuid": "9.0.1",
     "validator": "13.11.0",
     "zod": "3.21.4"
@@ -62,8 +59,6 @@
     "@types/node-schedule": "^2.1.0",
     "@types/nodemailer": "^6.4.15",
     "@types/ramda": "^0.29.3",
-    "@types/react": "^18.2.18",
-    "@types/react-dom": "^18.2.7",
     "@types/uuid": "^9.0.8",
     "@types/validator": "^13.9.0",
     "@types/web-push": "^3.6.3",
@@ -73,8 +68,6 @@
     "graphql-codegen-persisted-query-ids": "0.1.2",
     "ioredis": "5.3.2",
     "jest": "29.5.0",
-    "mailing": "1.1.0",
-    "next": "14.1.0",
     "npm-run-all": "4.1.5",
     "nyc": "15.1.0",
     "prettier": "2.8.8",
@@ -99,7 +92,6 @@
     "dev:doppler": "doppler run --config dev -- pnpm run dev",
     "dev:test": "pnpm run dev",
     "dev:graphql": "doppler run --config dev -- graphql-codegen --config codegen.ts --watch 'src/**.graphql' --watch 'src/**.ts'",
-    "dev:mailing": "doppler run --config dev -- mailing --typescript",
     "dev:offline": "pnpm run dev",
     "dev:ts": "cross-env NODE_ENV=development doppler run --config dev -- tsup --watch --dts",
     "format": "prettier --write .",
