--- a/packages/transactional/tsconfig.json
+++ b/packages/transactional/tsconfig.json
@@ -26,9 +26,12 @@
     /* AND if you're building for a library in a monorepo: */
     "composite": true,
     "declarationMap": true,
-    /* If your code doesn't run in the DOM: */
+    /* If your code runs in the DOM: */
     "lib": [
-      "es2022"
-    ]
+      "es2022",
+      "dom",
+      "dom.iterable"
+    ],
+    "jsx": "preserve"
   }
 }
