--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "@prisma/nextjs-monorepo-workaround-plugin": "5.18.0",
     "cross-env": "7.0.3",
     "husky": "8.0.3",
+    "prettier": "3.3.3",
+    "prettier-plugin-tailwindcss": "0.6.6",
+    "prettier-plugin-organize-imports": "4.0.0",
     "standard-version": "9.5.0",
     "syncpack": "11.2.1",
     "turbo": "2.0.12",
