--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -13,6 +13,7 @@
     "@azure/storage-blob": "12.15.0",
     "@klicker-uzh/grading": "workspace:*",
     "@klicker-uzh/prisma": "workspace:*",
+    "@klicker-uzh/transactional": "workspace:*",
     "@klicker-uzh/util": "workspace:*",
     "@pothos/core": "3.38.0",
     "@pothos/plugin-directives": "3.10.2",
@@ -56,6 +57,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.12.13",
     "@types/node-schedule": "^2.1.0",
+    "@types/nodemailer": "^6.4.15",
     "@types/ramda": "^0.29.3",
     "@types/uuid": "^9.0.8",
     "@types/validator": "^13.9.0",
