--- a/packages/transactional/package.json
+++ b/packages/transactional/package.json
@@ -4,15 +4,12 @@
   "volta": {
     "extends": "../../package.json"
   },
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
   "files": [
-    "dist"
+    "out"
   ],
   "scripts": {
-    "dev:email": "email dev",
-    "build": "tsup",
-    "build:email": "email export",
+    "dev:email": "email dev -d src/emails",
+    "build": "email export -d src/emails --outDir out",
     "format": "prettier --write .",
     "format:check": "prettier --check ."
   },
@@ -23,7 +20,6 @@
     "@uzh-bf/design-system": "3.0.0-alpha.15",
     "react": "18.3.1",
     "react-email": "2.1.6",
-    "tsup": "7.2.0",
     "typescript": "5.4.5"
   },
   "type": "module"
