--- a/packages/transactional/tsconfig.json
+++ b/packages/transactional/tsconfig.json
@@ -1,7 +1,5 @@
 {
-  "include": [
-    "**/**/*"
-  ],
+  "include": ["**/**/*"],
   "compilerOptions": {
     "baseUrl": ".",
     /* Base Options: */
@@ -27,11 +25,7 @@
     "composite": true,
     "declarationMap": true,
     /* If your code runs in the DOM: */
-    "lib": [
-      "es2022",
-      "dom",
-      "dom.iterable"
-    ],
+    "lib": ["es2022", "dom", "dom.iterable"],
     "jsx": "preserve"
   }
 }
