--- a/packages/transactional/tsconfig.json
+++ b/packages/transactional/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["**/**/*"],
+  "include": ["src/**/*"],
   "compilerOptions": {
     "baseUrl": ".",
     /* Base Options: */
@@ -15,17 +15,11 @@
     "strict": true,
     "noUncheckedIndexedAccess": true,
     "noImplicitOverride": true,
-    /* If transpiling with TypeScript: */
-    "module": "NodeNext",
-    "outDir": "dist",
-    "sourceMap": true,
-    /* AND if you're building for a library: */
-    "declaration": true,
-    /* AND if you're building for a library in a monorepo: */
-    "composite": true,
-    "declarationMap": true,
+    /* If NOT transpiling with TypeScript: */
+    "module": "preserve",
+    "noEmit": true,
     /* If your code runs in the DOM: */
     "lib": ["es2022", "dom", "dom.iterable"],
-    "jsx": "preserve"
+    "jsx": "react-jsx"
   }
 }
