--- a/turbo.json
+++ b/turbo.json
@@ -15,6 +15,13 @@
     "DATABASE_IMPORT_USER",
     "DATABASE_URL",
     "EDUID_CLIENT_SECRET",
+    "EMAIL_TYPE",
+    "EMAIL_HOST",
+    "EMAIL_PORT",
+    "EMAIL_SECURE",
+    "EMAIL_USER",
+    "EMAIL_PASS",
+    "EMAIL_FROM",
     "FUNCTIONS_EXTENSION_VERSION",
     "FUNCTIONS_WORKER_PROCESS_COUNT",
     "FUNCTIONS_WORKER_RUNTIME",
