add element status and prisma optimize

--- a/turbo.json
+++ b/turbo.json
@@ -34,6 +34,7 @@
     "NOTIFICATION_SECRET",
     "NOTIFICATION_SUPPORT_MAIL",
     "NOTIFICATION_URL",
+    "PRISMA_OPTIMIZE",
     "REDIS_CACHE_HOST",
     "REDIS_CACHE_PORT",
     "REDIS_HOST",
