--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -19,6 +19,7 @@
     "@pothos/plugin-prisma": "3.60.0",
     "@pothos/plugin-scope-auth": "3.20.0",
     "@pothos/plugin-validation": "3.10.0",
+    "@prisma/extension-optimize": "0.10.1",
     "axios": "1.4.0",
     "bcryptjs": "2.4.3",
     "dayjs": "1.11.12",
