working prisma optimize in backend-docker

--- a/apps/backend-docker/package.json
+++ b/apps/backend-docker/package.json
@@ -19,6 +19,14 @@
     "@graphql-yoga/redis-event-target": "1.0.0",
     "@klicker-uzh/graphql": "workspace:*",
     "@klicker-uzh/prisma": "workspace:*",
+    "@opentelemetry/exporter-trace-otlp-http": "0.52.1",
+    "@opentelemetry/instrumentation": "0.52.1",
+    "@opentelemetry/resources": "1.25.1",
+    "@opentelemetry/sdk-trace-base": "1.25.1",
+    "@opentelemetry/sdk-trace-node": "1.25.1",
+    "@opentelemetry/semantic-conventions": "1.25.1",
+    "@prisma/extension-optimize": "0.10.1",
+    "@prisma/instrumentation": "5.18.0",
     "@sentry/node": "7.103.0",
     "@sentry/tracing": "7.52.1",
     "cookie-parser": "1.4.6",
