--- a/deploy/charts/klicker-uzh-v2/values.yaml
+++ b/deploy/charts/klicker-uzh-v2/values.yaml
@@ -257,7 +257,11 @@ lti:
   redirectURL:
   cookieDomain:
   encryptionKey:
-
+  url:
+  name:
+  authEndpoint:
+  tokenEndpoint:
+  keysEndpoint:
   port: 4000
 
   db:
