--- a/deploy/env-prod-v3/helmfile.yaml
+++ b/deploy/env-prod-v3/helmfile.yaml
@@ -106,6 +106,11 @@ releases:
           redirectURL: '{{ requiredEnv "LTI_REDIRECT_URL" }}'
           cookieDomain: '{{ requiredEnv "COOKIE_DOMAIN" }}'
           encryptionKey: '{{ requiredEnv "APP_SECRET" }}'
+          name: OLAT DEMO UZH
+          url: https://demo.olat.uzh.ch
+          authEndpoint: https://demo.olat.uzh.ch/lti/auth
+          tokenEndpoint: https://demo.olat.uzh.ch/lti/token
+          keysEndpoint: https://demo.olat.uzh.ch/lti/keys
 
           db:
             type: postgres
