--- a/apps/lti/package.json
+++ b/apps/lti/package.json
@@ -10,12 +10,12 @@
   ],
   "dependencies": {
     "cross-env": "7.0.3",
-    "jsonwebtoken": "9.0.2",
+    "jsonwebtoken": "9.0.1",
     "ltijs": "5.9.4",
     "ltijs-sequelize": "2.4.4"
   },
   "devDependencies": {
-    "@types/jsonwebtoken": "9.0.6",
+    "@types/jsonwebtoken": "^9.0.0",
     "@types/ltijs": "^4.0.11",
     "@types/node": "^20.12.13",
     "nodemon": "3.0.1",
