enhance: implement LTI 1.3 for PWA, add session-storage based approach for LTI in iframe, and link existing accounts if email is provided (#4187)

--- a/apps/lti/package.json
+++ b/apps/lti/package.json
@@ -10,6 +10,7 @@
   ],
   "dependencies": {
     "cross-env": "7.0.3",
+    "jsonwebtoken": "9.0.2",
     "ltijs": "5.9.4",
     "ltijs-sequelize": "2.4.4"
   },
