fix(deploy): add remaining LTI configuration from env

--- a/deploy/env-prod-v3/helmfile.yaml
+++ b/deploy/env-prod-v3/helmfile.yaml
@@ -102,18 +102,19 @@ releases:
           sentryDSN: '{{ env "SENTRY_DSN" }}'
 
         lti:
+          appSecret: '{{ requiredEnv "APP_SECRET" }}'
           clientId: '{{ requiredEnv "LTI_CLIENT_ID" }}'
           redirectURL: '{{ requiredEnv "LTI_REDIRECT_URL" }}'
           cookieDomain: '{{ requiredEnv "COOKIE_DOMAIN" }}'
           encryptionKey: '{{ requiredEnv "APP_SECRET" }}'
-          name: OLAT DEMO UZH
-          url: https://demo.olat.uzh.ch
-          authEndpoint: https://demo.olat.uzh.ch/lti/auth
-          tokenEndpoint: https://demo.olat.uzh.ch/lti/token
-          keysEndpoint: https://demo.olat.uzh.ch/lti/keys
+          name: '{{ requiredEnv "LTI_NAME" }}'
+          url: '{{ requiredEnv "LTI_URL" }}'
+          authEndpoint: '{{ requiredEnv "LTI_AUTH_ENDPOINT" }}'
+          tokenEndpoint: '{{ requiredEnv "LTI_TOKEN_ENDPOINT" }}'
+          keysEndpoint: '{{ requiredEnv "LTI_KEYS_ENDPOINT" }}'
 
           db:
-            type: postgres
+            type: '{{ requiredEnv "LTI_DB_TYPE" }}'
             host: '{{ requiredEnv "LTI_DB_HOST" }}'
             port: '{{ requiredEnv "LTI_DB_PORT" }}'
             name: '{{ requiredEnv "LTI_DB_NAME" }}'
